# teleddns

./: .gitignore  .packit.yaml  99dnsupdate  99dnsupdate.template  Cargo.toml  PRD.md  README  README.md  ddns-reportip.py  ddns.yaml  ddnsm.service  deploy.sh  go.mod  go.sum  pyproject.toml  reportip.py  setup.py  teleddns.1  teleddns.service  teleddns.spec  teleddns.yaml.sample
.github/workflows/: copr.yml  release.yml
client/: reportip.py  reportipconf.py
cmd/teleddns/: main.go
ddnsm/: __init__.py
debian/: changelog  control  copyright  dirs  install  manpages  postinst  postrm  prerm  rules  teleddns.install
internal/applog/: applog.go
internal/config/: config.go  config_test.go
internal/daemon/: loop.go
internal/ddns/: client.go  client_test.go
internal/filter/: filter.go  filter_test.go
internal/hooks/: hooks.go  hooks_test.go
internal/metric/: metric.go  metric_test.go
internal/observe/: print.go
internal/state/: state.go  state_test.go
internal/watch/: decode.go  decode_test.go  events.go  watch.go
scripts/: check-versions.sh  create-vendor-tarball.sh
server/: config.py  htpasswd  rest.py
server/webroot/: htaccess  rest.cgi  rest.wsgi
src/: main.rs
src/teleddns/: __init__.py
tests/: ddnsm.yaml
