[tool.poetry]
name = "teleddns"
version = "0.1.5"
description = "Telephant Linux DDNS client"
authors = ["Tomas Hlavacek <tmshlvck@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tmshlvck/teleddns"
homepage = "https://www.telephant.eu/"

[tool.poetry.dependencies]
python = "^3.8"
pyroute2 = "^0.7.12"
pyyaml = "*"
requests = "^2.27"
passlib = "^1.7.4"
click = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teleddns = "teleddns:main"
